tests/agl/rejections/type/inference_conflicting_equality.agl
def choose[T](left: T, right: T) -> T = left
choose(1, "text")
